--- a/BryanA-TableApp/app.json
+++ b/BryanA-TableApp/app.json
@@ -1,6 +1,6 @@
 {
   "id": "d30af3a7-247a-5555-80a1-9b82e52ee5a6",
-  "name": "SEI Library & Table Customizations",
+  "name": "BryanA - SEI Table Customizations",
   "publisher": "BryanA BC Developments Inc.",
   "brief": "Customizes tables, and provides common library functions.",
   "description": "",
