Updated app info.

--- a/BryanA-DevelopmentsApp/app.json
+++ b/BryanA-DevelopmentsApp/app.json
@@ -1,6 +1,6 @@
 {
-  "id": "d30af3a7-247a-5556-80a1-9b82e52ee5a6",
-  "name": "BryanA - SEI Custom Functionality",
+  "id": "d30af3a7-247a-5557-80a1-9b82e52ee5a6",
+  "name": "BryanA - SEI Functionality",
   "publisher": "BryanA BC Developments Inc.",
   "brief": "Provides custom functionality for SEI Delta.",
   "description": "",
