--- a/BryanA-TableApp/.vscode/launch.json
+++ b/BryanA-TableApp/.vscode/launch.json
@@ -9,7 +9,7 @@
             "port": 7114,
             "serverInstance": "Test",
             "authentication": "UserPassword",
-            // "schemaUpdateMode": "ForceSync"
+            "schemaUpdateMode": "ForceSync"
         }
     ]
 }
