--- a/BryanA-DevelopmentsApp/.vscode/launch.json
+++ b/BryanA-DevelopmentsApp/.vscode/launch.json
@@ -1,28 +1,28 @@
 {
     "version": "1.0.0",
     "configurations": [
-        // {
-        //     "type": "al",
-        //     "request": "launch",
-        //     "name": "Dev",
-        //     "server": "http://localhost",
-        //     "port": 7059,
-        //     "serverInstance": "Dev",
-        //     "authentication": "UserPassword",
-        //     "schemaUpdateMode": "Synchronize"
-        // },
-        // Tisk Tisk....
         {
             "type": "al",
             "request": "launch",
-            "name": "Test",
+            "name": "Dev",
             "server": "http://localhost",
-            "port": 7114,
-            "serverInstance": "Test",
+            "port": 7119,
+            "serverInstance": "Dev",
             "authentication": "UserPassword",
             "schemaUpdateMode": "Synchronize"
         }
-// Powershell to Production Only!
+        // ,
+        // {
+        //     "type": "al",
+        //     "request": "launch",
+        //     "name": "Test",
+        //     "server": "http://localhost",
+        //     "port": 7114,
+        //     "serverInstance": "Test",
+        //     "authentication": "UserPassword",
+        //     "schemaUpdateMode": "Synchronize"
+        // }
+        // ,
         // {
         //     "type": "al",
         //     "request": "launch",
