Updated to make option field on BOM Component table instead of Production BOM Line.

--- a/BryanA-TableApp/.vscode/launch.json
+++ b/BryanA-TableApp/.vscode/launch.json
@@ -9,7 +9,7 @@
             "port": 7119,
             "serverInstance": "Dev",
             "authentication": "UserPassword",
-            "schemaUpdateMode": "Synchronize"
+            // "schemaUpdateMode": "ForceSync"
         }
         ,
         {
