--- a/BryanA-TableApp/.vscode/launch.json
+++ b/BryanA-TableApp/.vscode/launch.json
@@ -20,7 +20,7 @@
             "port": 7114,
             "serverInstance": "Test",
             "authentication": "UserPassword",
-            // "schemaUpdateMode": "ForceSync"
+            "schemaUpdateMode": "ForceSync"
         }
         // ,
         // {
