Added code to submit and cancel inventory approvals.

--- a/BryanA-TableApp/.vscode/launch.json
+++ b/BryanA-TableApp/.vscode/launch.json
@@ -11,27 +11,27 @@
             "authentication": "UserPassword",
             // "schemaUpdateMode": "ForceSync"
         }
-        ,
-        {
-            "type": "al",
-            "request": "launch",
-            "name": "Test",
-            "server": "http://localhost",
-            "port": 7114,
-            "serverInstance": "Test",
-            "authentication": "UserPassword",
-            // "schemaUpdateMode": "ForceSync"
-        }
-        ,
-        {
-            "type": "al",
-            "request": "launch",
-            "name": "Live",
-            "server": "http://localhost",
-            "port": 7109,
-            "serverInstance": "SEI140",
-            "authentication": "UserPassword",
-            "schemaUpdateMode": "Synchronize"
-        }
+        // ,
+        // {
+        //     "type": "al",
+        //     "request": "launch",
+        //     "name": "Test",
+        //     "server": "http://localhost",
+        //     "port": 7114,
+        //     "serverInstance": "Test",
+        //     "authentication": "UserPassword",
+        //     // "schemaUpdateMode": "ForceSync"
+        // }
+        // ,
+        // {
+        //     "type": "al",
+        //     "request": "launch",
+        //     "name": "Live",
+        //     "server": "http://localhost",
+        //     "port": 7109,
+        //     "serverInstance": "SEI140",
+        //     "authentication": "UserPassword",
+        //     "schemaUpdateMode": "Synchronize"
+        // }
     ]
 }
