Changed Last Sales Activity to Date type, and added install code to populate values.

--- a/BryanA-TableApp/.vscode/launch.json
+++ b/BryanA-TableApp/.vscode/launch.json
@@ -26,7 +26,7 @@
         // {
         //     "type": "al",
         //     "request": "launch",
-        //     "name": "Live",
+        //     "name": "Live"
         //     "server": "http://localhost",
         //     "port": 7109,
         //     "serverInstance": "SEI140",
