--- a/BryanA-TableApp/.vscode/launch.json
+++ b/BryanA-TableApp/.vscode/launch.json
@@ -9,7 +9,7 @@
             "port": 7119,
             "serverInstance": "Dev",
             "authentication": "UserPassword",
-            "schemaUpdateMode": "ForceSync"
+            // "schemaUpdateMode": "ForceSync"
         }
         ,
         {
@@ -22,17 +22,6 @@
             "authentication": "UserPassword",
             // "schemaUpdateMode": "ForceSync"
         }
-        // ,
-        // {
-        //     "type": "al",
-        //     "request": "launch",
-        //     "name": "Test",
-        //     "server": "http://localhost",
-        //     "port": 7114,
-        //     "serverInstance": "Test",
-        //     "authentication": "UserPassword",
-        //     // "schemaUpdateMode": "ForceSync"
-        // }
         // ,
         // {
         //     "type": "al",
