--- a/BryanA-TableApp/.vscode/launch.json
+++ b/BryanA-TableApp/.vscode/launch.json
@@ -21,7 +21,16 @@
         //     "serverInstance": "Test",
         //     "authentication": "UserPassword",
         //     // "schemaUpdateMode": "ForceSync"
+        // },
+        // {
+        //     "type": "al",
+        //     "request": "launch",
+        //     "name": "Prod",
+        //     "server": "http://localhost",
+        //     "port": 7109,
+        //     "serverInstance": "SEI140",
+        //     "authentication": "UserPassword",
+        //     // "schemaUpdateMode": "ForceSync"
         // }
-        // ,s
     ]
 }
