Added code to restrict page closure to select users only.

--- a/BryanA-TableApp/.vscode/launch.json
+++ b/BryanA-TableApp/.vscode/launch.json
@@ -10,6 +10,7 @@
             "serverInstance": "Dev",
             "authentication": "UserPassword",
             // "schemaUpdateMode":"Recreate"
+            "schemaUpdateMode": "ForceSync"
         }
         ,
         {
